Big changes, most importantly patched updates to collections

--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,8 @@ local.properties
 *.dotCover
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
-#packages/
+packages/
+robots.txt
 
 # Visual C++ cache files
 ipch/
